unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/FS_Community_Group_Member_Term__c.object-meta.xml
<CustomObject>
    <label>Community Group Member Term</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Community Group Member Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Member Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>