unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Community_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>FS_Community_Group_Member__c</fullName>
    <label>Community Group Member</label>
    <referenceTo>PagesApi__Community_Group_Member__c</referenceTo>
    <relationshipLabel>Community Group Member Terms</relationshipLabel>
    <relationshipName>Community_Group_Member_Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>