unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Community_Group_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Community_Group_Member_Name__c</fullName>
    <description>Contact name of the Community Group Member</description>
    <formula>FS_Community_Group_Member__r.PagesApi__Display_Name__c</formula>
    <inlineHelpText>Contact name of the Community Group Member</inlineHelpText>
    <label>Community Group Member Name</label>
    <type>Text</type>
</CustomField>