unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Community_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Community_Group_Name__c</fullName>
    <description>Name of Community Group for this term</description>
    <formula>FS_Community_Group_Member__r.PagesApi__Community_Group__r.Name</formula>
    <inlineHelpText>Name of Community Group for this term</inlineHelpText>
    <label>Community Group Name</label>
    <type>Text</type>
</CustomField>