unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Deactivated_Manually__c.field-meta.xml
<CustomField>
    <fullName>FS_Deactivated_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deactivated Manually</label>
    <type>Checkbox</type>
</CustomField>