unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Engagement_Account__c.field-meta.xml
<CustomField>
    <fullName>FS_Engagement_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account related to the Community Group Member at the time of purchase</description>
    <inlineHelpText>The Account related to the Community Group Member at the time of purchase</inlineHelpText>
    <label>Engagement Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Community Group Member Terms</relationshipLabel>
    <relationshipName>Community_Group_Member_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>