unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Active__c</fullName>
    <formula>IF(
AND(
OR(
AND(
 FS_Term_Grace_Period_End_Date__c &gt;= TODAY(),
 FS_Community_Group_Member__r.FS_Paid_Through_Date__c  &lt;=  FS_Term_End_Date__c,
 FS_Community_Group_Member__r.FS_Grace_Period_End_Date__c &lt;=  FS_Term_Grace_Period_End_Date__c 
),
 FS_Term_End_Date__c  &gt;=  TODAY()
),
 FS_Term_Start_Date__c &lt;= TODAY(),
 NOT(FS_Deactivated_Manually__c)
),
TRUE,
FALSE
)</formula>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>