unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Community Group Member Terms</relationshipLabel>
    <relationshipName>Community_Group_Member_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>