unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Term__c.field-meta.xml
<CustomField>
    <fullName>FS_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Community Group Member Terms</relationshipLabel>
    <relationshipName>Community_Group_Member_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>