unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Term_Grace_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Term_Grace_Period_End_Date__c</fullName>
    <inlineHelpText>Grace Period End Date is based off the related Subscription Term's Grace Period End Date</inlineHelpText>
    <label>Term Grace Period End Date</label>
    <type>Date</type>
</CustomField>