unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Term_Role__c.field-meta.xml
<CustomField>
    <fullName>FS_Term_Role__c</fullName>
    <inlineHelpText>Community group member's Role for this term.</inlineHelpText>
    <label>Term Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 - Member</fullName>
                <default>true</default>
                <label>100 - Member</label>
            </value>
            <value>
                <fullName>010 - President</fullName>
                <isActive>false</isActive>
                <label>010 - President</label>
            </value>
            <value>
                <fullName>020 - Chair</fullName>
                <isActive>false</isActive>
                <label>020 - Chair</label>
            </value>
            <value>
                <fullName>030 - Chair-Elect</fullName>
                <isActive>false</isActive>
                <label>030 - Chair-Elect</label>
            </value>
            <value>
                <fullName>040 - Vice-Chair</fullName>
                <isActive>false</isActive>
                <label>040 - Vice-Chair</label>
            </value>
            <value>
                <fullName>050 - Treasurer</fullName>
                <isActive>false</isActive>
                <label>050 - Treasurer</label>
            </value>
            <value>
                <fullName>060 - Financial Officer</fullName>
                <isActive>false</isActive>
                <label>060 - Financial Officer</label>
            </value>
            <value>
                <fullName>070 - Secretary</fullName>
                <isActive>false</isActive>
                <label>070 - Secretary</label>
            </value>
            <value>
                <fullName>080 - Delegate</fullName>
                <isActive>false</isActive>
                <label>080 - Delegate</label>
            </value>
            <value>
                <fullName>090 - Alternate</fullName>
                <isActive>false</isActive>
                <label>090 - Alternate</label>
            </value>
            <value>
                <fullName>110 - District Representative</fullName>
                <isActive>false</isActive>
                <label>110 - District Representative</label>
            </value>
            <value>
                <fullName>120 - Former Chair</fullName>
                <isActive>false</isActive>
                <label>120 - Former Chair</label>
            </value>
            <value>
                <fullName>130 - Ex-Officio Member</fullName>
                <isActive>false</isActive>
                <label>130 - Ex-Officio Member</label>
            </value>
            <value>
                <fullName>140 - Honorary Member</fullName>
                <isActive>false</isActive>
                <label>140 - Honorary Member</label>
            </value>
            <value>
                <fullName>150 - Student Member</fullName>
                <isActive>false</isActive>
                <label>150 - Student Member</label>
            </value>
            <value>
                <fullName>160 - Other</fullName>
                <isActive>false</isActive>
                <label>160 - Other</label>
            </value>
            <value>
                <fullName>170 - Internal (NYSBA) Group Liaison</fullName>
                <isActive>false</isActive>
                <label>170 - Internal (NYSBA) Group Liaison</label>
            </value>
            <value>
                <fullName>180 - External Group Liaison</fullName>
                <isActive>false</isActive>
                <label>180 - External Group Liaison</label>
            </value>
            <value>
                <fullName>190 - Non-Attorney Advisor</fullName>
                <isActive>false</isActive>
                <label>190 - Non-Attorney Advisor</label>
            </value>
            <value>
                <fullName>200 - Staff Liaison</fullName>
                <isActive>false</isActive>
                <label>200 - Staff Liaison</label>
            </value>
            <value>
                <fullName>210 - CLE Staff Liaison</fullName>
                <isActive>false</isActive>
                <label>210 - CLE Staff Liaison</label>
            </value>
            <value>
                <fullName>220 - Distribution List Only</fullName>
                <isActive>false</isActive>
                <label>220 - Distribution List Only</label>
            </value>
            <value>
                <fullName>999 - Unmapped Legacy Position</fullName>
                <isActive>false</isActive>
                <label>999 - Unmapped Legacy Position</label>
            </value>
            <value>
                <fullName>Alternate</fullName>
                <isActive>false</isActive>
                <label>Alternate</label>
            </value>
            <value>
                <fullName>CLE Staff Liaison</fullName>
                <isActive>false</isActive>
                <label>CLE Staff Liaison</label>
            </value>
            <value>
                <fullName>Chair</fullName>
                <isActive>false</isActive>
                <label>Chair</label>
            </value>
            <value>
                <fullName>Chair-Elect</fullName>
                <isActive>false</isActive>
                <label>Chair-Elect</label>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
                <isActive>false</isActive>
                <label>Co-Chair</label>
            </value>
            <value>
                <fullName>Council Chair</fullName>
                <isActive>false</isActive>
                <label>Council Chair</label>
            </value>
            <value>
                <fullName>Council Co-Chair</fullName>
                <isActive>false</isActive>
                <label>Council Co-Chair</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>