unpackaged/main/default/objects/FS_Community_Group_Member_Term__c/fields/FS_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Term_Start_Date__c</fullName>
    <description>The start date for community group member term</description>
    <inlineHelpText>The start date for community group member term</inlineHelpText>
    <label>Term Start Date</label>
    <type>Date</type>
</CustomField>